--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         mavenLocal()
-        maven { url "https://repo.grails.org/grails/core" }
+        maven { url "https://repo.grails.org/grails/com.sampleapp.core" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
@@ -22,13 +22,13 @@ apply plugin:"asset-pipeline"
 
 repositories {
     mavenLocal()
-    maven { url "https://repo.grails.org/grails/core" }
+    maven { url "https://repo.grails.org/grails/com.sampleapp.core" }
 }
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
+    compile "org.grails:grails-com.sampleapp.core"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
@@ -38,7 +38,7 @@ dependencies {
     compile "org.grails.plugins:hibernate5:$gormVersion", {
         exclude group: 'org.grails', module: 'grails-async'
     }
-    compile "org.hibernate:hibernate-core:5.1.3.Final"
+    compile "org.hibernate:hibernate-com.sampleapp.core:5.1.3.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
     compile "org.grails.plugins:neo4j:$gormVersion", {
         exclude group: 'org.grails', module: 'grails-datastore-gorm-grails2-support'
