--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     }
     compile "org.hibernate:hibernate-core:5.1.3.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
-    compile "org.grails.plugins:neo4j:$gormVersion", {
+    compile "org.grails.plugins:neo4j:6.1.3", {
         exclude group: 'org.grails', module: 'grails-datastore-gorm-grails2-support'
     }
 
